# BRender-v1.3.2

./: .gitignore  BUILDING.md  CMakeLists.txt  PORTING_PLAN.md  README.md  meson.build  setup_env.sh
cmake/: BRenderCodegen.cmake  BRenderOptions.cmake
core/: CMakeLists.txt
core/fw/: blockops.c  brbegin.c  dev_objs.cgh  devquery.c  devsetup.c  lexer.h  magicsym_c.c  token.c  tokenval.c
core/host/: host_posix.c  hostcfg.c  hstsetup.c
core/inc/: brender.h  compiler.h  fw_p.h  math_p.h  v1db_p.h
core/math/: fixed_div_c.c
core/pixelmap/: fonts_c.c  memloops_c.c  pmmem.h  pmnull.c
core/std/: stdlib.c  stdmem.c
core/v1db/: dbsetup.c  render.c
ddi_inc/: dev_objs.cgh
drivers/pentprim/: CMakeLists.txt  mmx_ip.h  pentprim_rast_c.c  pentprim_rast_stubs.c  pentprim_util_c.c  plib.h  pstate.c  work.c
drivers/softrend/: CMakeLists.txt  drv_ip.h  softrend_asm_c.c  state.c  v1model.c
inc/: brender.h  brv1db.h  compiler.h  fw_p.h  v1db_p.h
tests/: CMakeLists.txt  br_begin_test.c  br_pentprim_rast_test.c  br_softrend_geometry_test.c  br_softrend_render_test.c  br_softrend_test.c
